<resources>
    <string name="app_name">뮤몽</string>

    <string name="adfit_client_id_50">DAN-XuUWhh7ZeB0hSQDl</string>
    <string name="adfit_client_id_100">DAN-qPia47sOfpcajRFD</string>

    <!-- Common -->
    <string name="reply">대댓글</string>
    <string name="title_home">홈</string>
    <string name="title_social">소셜</string>
    <string name="title_community">커뮤니티</string>
    <string name="title_profile">MY</string>
    <string name="title_practice">연습장</string>
    <string name="default_hint">검색어를 입력해주세요.</string>

    <!-- Fragment Titles -->
    <string name="title_home_fragment">@string/title_home</string>
    <string name="title_social_fragment">@string/title_social</string>
    <string name="title_community_fragment">@string/title_community</string>
    <string name="title_profile_fragment">@string/title_profile</string>
    <string name="title_practice_fragment">@string/title_practice</string>

    <!-- Bottom Navigation Bar -->
    <string name="nav_home_label">@string/title_home</string>
    <string name="nav_social_label">@string/title_social</string>
    <string name="nav_community_label">@string/title_community</string>
    <string name="nav_profile_label">@string/title_profile</string>

    <!-- Home Fragment -->
    <string name="home_notice_title">공지사항</string>
    <string name="home_event_title">이벤트</string>

    <!-- Login Activity -->
    <string name="login_start_with_kakao">카카오로 시작하기</string>
    <string name="login_start_with_naver">네이버로 시작하기</string>
    <string name="login_tutorial_1_title">하루하루의\n연습을 기록해 보세요</string>
    <string name="login_tutorial_2_title">나의 음악을 공유하고\n응원을 주고받아요</string>
    <string name="login_tutorial_3_title">음악 전문 커뮤니티에서\n다양한 사람들과 만나요</string>
    <string name="login_tutorial_1_content">녹음과 메트로놈, 튜너 등\n음악 연습에 꼭 필요한 기능</string>
    <string name="login_tutorial_2_content">피드형 소셜에서 프라이빗한\n음악 기록 공유와 응원</string>
    <string name="login_tutorial_3_content">악기별로 세분화된\n자유로운 정보성 커뮤니티</string>

    <!-- Join Activity -->
    <string name="join_please_input_name">이름을 입력해주세요.</string>
    <string name="join_please_input_id">id를 입력해주세요.</string>
    <string name="join_please_select_profile_image">프로필 사진을 선택해주세요.</string>
    <string name="join_custom_image_select_from_gallery">앨범에서 선택</string>
    <string name="join_custom_image_select_take_picture">사진 촬영</string>
    <string name="join_mumong_next">다음</string>

    <!-- Practice Fragment -->
    <string name="practice_home_practice_today_title">오늘의 연습</string>
    <string name="practice_home_practice_analytics_title">연습 기록</string>
    <string name="practice_home_practice_pieces_title">곡별 연습</string>
    <string name="practice_calendar_monday">월</string>
    <string name="practice_calendar_tuesday">화</string>
    <string name="practice_calendar_wednesday">수</string>
    <string name="practice_calendar_thursday">목</string>
    <string name="practice_calendar_friday">금</string>
    <string name="practice_calendar_satureday">토</string>
    <string name="practice_calendar_sunday">일</string>
    <string name="practice_add_new_practice">오늘의 연습 추가하기</string>

    <string name="practice_add_practice_select_piece">곡을 선택해 주세요.</string>
    <string name="practice_add_practice_will_show_file_name">이 곳에 녹음 중인 파일명이 표시됩니다.</string>
    <string name="practice_add_practice_practice_today_title">오늘의 연습</string>

    <!-- Social Fragment -->

    <!-- Community Fragment -->
    <string name="community_main_search_board_hint">게시판을 검색해보세요</string>
    <string name="community_title_favorite_boards">즐겨찾는 게시판</string>
    <string name="community_title_mumong_pick">뮤몽 PICK</string>
    <string name="community_title_recent_articles">실시간 게시글</string>
    <string name="community_suggest">추천</string>
    <string name="community_notice">공지사항</string>

    <string name="community_topic_all">전체</string>
    <string name="community_topic_best">베스트</string>
    <string name="community_topic_daily">일상</string>
    <string name="community_topic_recording">내 음악을 들어줘</string>
    <string name="community_topic_tip">꿀팁</string>
    <string name="community_topic_question">질문답변</string>
    <string name="community_topic_advertise">홍보</string>

    <string name="community_search_remove_all_recent_searched"><u>모두 삭제</u></string>
    <string name="community_search_board_hint"><u>게시판 이름</u></string>

    <!-- Tooblar Actions -->
    <string name="toolbar_action_more">More</string>
    <string name="toolbar_action_search">Search</string>
    <string name="toolbar_action_tuner">Tuner</string>
    
    <!-- Profile -->
    <string name="profile_common_notice">공지사항</string>
    <string name="profile_common_alert">알림</string>
    <string name="profile_common_settings">설정</string>

    <string name="profile_my_target_practice_time">목표 연습시간</string>
    <string name="profile_my_instruments">주요 악기</string>
    <string name="template_profile_my_target_practice_time_hour">%d시간</string>
    <string name="template_profile_my_target_practice_time_minute">%d분</string>
    <string name="template_profile_my_instruments_count">%d개</string>

    <string name="profile_common_mumong_guide">뮤몽 안내서</string>
    <string name="profile_common_about_us">제작자 이야기</string>
    <string name="profile_common_version_info">버전 정보</string>

    <!-- Comment -->
    <string name="comment_hint">댓글을 남겨주세요.</string>

    <!-- placeholder -->
    <string name="empty_two_lines">\n</string>
</resources>