<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@id/homeFragmentNav"
        android:enabled="true"
        android:icon="@drawable/btn_nav_home"
        android:title="@string/nav_home_label"/>

    <item
        android:id="@id/practiceNestedNav"
        android:enabled="true"
        android:icon="@drawable/btn_nav_practice"
        android:title="@string/nav_practice_label"/>

    <item
        android:id="@id/socialFragmentNav"
        android:enabled="true"
        android:icon="@drawable/btn_nav_social"
        android:title="@string/nav_social_label"/>

    <item
        android:id="@id/communityFragmentNav"
        android:enabled="true"
        android:icon="@drawable/btn_nav_community"
        android:title="@string/nav_community_label"/>
</menu>