<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.practice.home.PracticeHomeFragment">
    <data>
        <variable
            name="viewModel"
            type="com.studiowash.mumong.presentation.activity.practice.home.PracticeHomeViewModel" />
        <variable
            name="year"
            type="int" />
        <variable
            name="month"
            type="int" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_2">
        <View
            android:id="@+id/bg_top_layer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/cv_date_scroll_view"
            android:background="@drawable/bg_rounded_bottom_rect_20dp_fill_white"/>
        <TextView
            android:id="@+id/tv_practice_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/title_practice_fragment" />
        <LinearLayout
            android:id="@+id/ll_calendar_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_practice_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_calendar_info_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{Integer.toString(year)}"/>
            <ImageView
                android:id="@+id/iv_calendar_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_calendar"
                android:onClick="@{viewModel::onClickCalendarIcon}"/>
            <TextView
                android:id="@+id/tv_calendar_info_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{Integer.toString(month)}"/>
        </LinearLayout>
        <com.studiowash.mumong.presentation.activity.practice.home.view.DateScrollView
            android:id="@+id/cv_date_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ll_calendar_info"
            android:paddingBottom="30dp"/>
        <LinearLayout
            android:id="@+id/ll_new_practice_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="15dp"
            app:layout_constraintTop_toBottomOf="@id/cv_date_scroll_view"
            android:layout_marginTop="@dimen/horizontal_separator_height_thick"
            android:background="@drawable/bg_rounded_rect_16dp_fill_brand_gradient"
            android:onClick="@{viewModel::onClickAddPractice}">
            <TextView
                android:id="@+id/tv_new_practice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/practice_add_new_practice"
                android:textColor="@color/text_invert"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_practice_today"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_new_practice_wrapper"
            android:layout_marginTop="@dimen/horizontal_separator_height_thick"
            android:background="@drawable/bg_rounded_top_rect_20dp_fill_white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/practice_home_practice_today_title"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>