<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.login.LoginActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_gray">
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_tutorial"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:maxWidth="312dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ui_tutorial_indicator_dots"
            android:layout_marginTop="46dp"
            android:layout_marginBottom="40dp"/>
        <ru.tinkoff.scrollingpagerindicator.ScrollingPagerIndicator
            android:id="@+id/ui_tutorial_indicator_dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="42sp"
            app:layout_constraintBottom_toTopOf="@id/tv_tutorial_title"
            app:layout_constraintStart_toStartOf="@id/vp_tutorial"
            app:layout_constraintEnd_toEndOf="@id/vp_tutorial"/>
        <TextView
            android:id="@+id/tv_tutorial_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/text_black"
            android:text="@string/empty_two_lines"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_tutorial_content"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:id="@+id/tv_tutorial_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/empty_two_lines"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ll_login_buttons"
            android:gravity="center"
            android:textColor="@color/text_dark_gray"
            android:layout_marginBottom="50dp"/>
        <LinearLayout
            android:id="@+id/ll_login_buttons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_kakao_login"
                android:layout_marginHorizontal="20dp"
                android:layout_width="312dp"
                android:layout_height="50dp"
                android:foreground="@drawable/ripple_black_rounded_rect_20dp"
                android:background="@drawable/bg_btn_kakao_login">
                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:src="@drawable/ic_logo_small_kakao"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_start_with_kakao"
                    android:textColor="@color/text_black"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_naver_login"
                android:layout_marginHorizontal="20dp"
                android:layout_width="312dp"
                android:layout_height="50dp"
                android:foreground="@drawable/ripple_black_rounded_rect_20dp"
                android:background="@drawable/bg_btn_naver_login">
                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:src="@drawable/ic_logo_small_naver"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_start_with_naver"
                    android:textColor="@color/text_invert"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>