<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.practice.home.PracticeHomeFragment">
    <data>
        <import type="com.studiowash.mumong.presentation.screen.practice.addpractice.record.RecordingStatus"/>
        <import type="com.studiowash.mumong.presentation.screen.practice.addpractice.AddPracticeViewModel.MetronomeTunerStatus"/>
        <variable
            name="metronomeTunerStatus"
            type="MetronomeTunerStatus"/>
        <variable
            name="practiceTimeSec"
            type="int" />
        <variable
            name="recordingStatus"
            type="RecordingStatus" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_2">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_btn_back"
            app:collapseIcon="@drawable/btn_bookmark"/>
        <LinearLayout
            android:id="@+id/ll_practice_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="@id/toolbar"
            app:layout_constraintEnd_toEndOf="@id/toolbar"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_music"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.format(`%02d:%02d:%02d`, practiceTimeSec/3600, practiceTimeSec/60, practiceTimeSec%60), default=`01:02:12`}"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_metronome_tuner_icons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ll_practice_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/iv_metronome_btn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="15dp"
                isSelected="@{metronomeTunerStatus == MetronomeTunerStatus.Metronome}"
                android:src="@drawable/selector_ic_metronome" />
            <ImageView
                android:id="@+id/iv_tuner_btn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                isSelected="@{metronomeTunerStatus == MetronomeTunerStatus.Tuner}"
                android:src="@drawable/selector_ic_tuner"/>
        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctl_metronome_tuner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ll_metronome_tuner_icons">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ctl_metronome"
                android:layout_width="match_parent"
                android:layout_height="88dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                goneUnless="@{metronomeTunerStatus == MetronomeTunerStatus.Metronome}"
                android:background="@drawable/bg_rounded_rect_16dp_fill_white"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ctl_tuner"
                android:layout_width="match_parent"
                android:layout_height="88dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                goneUnless="@{metronomeTunerStatus == MetronomeTunerStatus.Tuner}"
                android:background="@drawable/bg_rounded_rect_16dp_fill_white"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_instrument_list"
            android:layout_width="0dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toBottomOf="@id/ctl_metronome_tuner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_add_instrument"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:paddingStart="@dimen/fragment_default_horizontal_padding"/>
        <ImageView
            android:id="@+id/iv_add_instrument"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/rv_instrument_list"
            app:layout_constraintBottom_toBottomOf="@id/rv_instrument_list"
            android:src="@drawable/ic_add_plus"
            android:layout_marginEnd="@dimen/fragment_default_horizontal_padding"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctl_new_recording"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="25dp"
            android:paddingStart="@dimen/fragment_default_horizontal_padding"
            android:paddingEnd="16dp"
            android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@id/rv_instrument_list"
            android:background="@drawable/selector_bg_new_recording_rounded_rect_20dp">

            <Button
                android:id="@+id/record_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{recordingStatus == RecordingStatus.RECORDING ? `Stop` : recordingStatus == RecordingStatus.DONE_RECORDING ?`Play` : recordingStatus == RecordingStatus.PLAYING ? `Stop` :`Record`}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/tv_recording_piece_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/practice_add_practice_select_piece"
                android:textSize="14sp"
                android:textColor="@color/text_dark_dark_gray"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/tv_recording_record_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="3dp"
                android:textColor="@color/text_dark_dark_gray"
                app:layout_constraintTop_toBottomOf="@id/tv_recording_piece_name"
                android:text="- 00:03"/>
            <TextView
                android:id="@+id/tv_recording_file_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="12sp"
                android:textColor="@color/text_dark_gray"
                android:layout_marginTop="3dp"
                app:layout_constraintTop_toBottomOf="@id/tv_recording_record_time"
                android:text="@string/practice_add_practice_will_show_file_name"/>
            <ImageView
                android:id="@+id/iv_record_btn"
                android:layout_width="52dp"
                android:layout_height="52dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/btn_record"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_practice_today"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ctl_new_recording"
            android:layout_marginTop="@dimen/horizontal_separator_height_thick"
            android:paddingHorizontal="@dimen/fragment_default_horizontal_padding"
            android:paddingTop="@dimen/fragment_default_top_padding"
            android:background="@drawable/bg_rounded_top_rect_20dp_fill_white">

            <TextView
                android:id="@+id/tv_practice_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/practice_add_practice_practice_today_title"/>
            <TextView
                android:id="@+id/tv_sort_criteria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tv_practice_today"
                app:layout_constraintTop_toTopOf="@id/tv_practice_today"
                app:layout_constraintBottom_toBottomOf="@id/tv_practice_today"
                android:layout_marginStart="10dp"
                android:textSize="12sp"
                android:textColor="@color/text_gray"
                android:text="별표순"/>
            <ImageView
                android:id="@+id/iv_sort_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tv_sort_criteria"
                app:layout_constraintTop_toTopOf="@id/tv_practice_today"
                app:layout_constraintBottom_toBottomOf="@id/tv_practice_today"
                android:src="@drawable/ic_sort_by"/>
            <ImageView
                android:id="@+id/iv_search_practice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_practice_today"
                app:layout_constraintBottom_toBottomOf="@id/tv_practice_today"
                android:src="@drawable/ic_search_brand"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_practice_today"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>